Fixed Authorization and excess logs